Ajustes para funcionamento correto na versão de arquivos estáticos